--- a/style.css
+++ b/style.css
@@ -10,6 +10,36 @@ body {
   padding: 30px;
 }
 
+.cx-titulo{
+  /* position: relative; */
+  width: 940px;
+  margin: 0 auto;
+}
+
+nav{
+  /* position: absolute; */
+  position:static;
+  top: 110px;
+  right: 0;
+}
+
+nav li {
+  display: inline-block;
+  margin: 0 0 0 15px;
+}
+
+nav a {
+  text-transform: uppercase;
+  color: #000000;
+  font-weight: bold;
+  font-size: 22px;
+  text-decoration: none;
+}
+nav a:hover{
+  color: #C78C09;
+  text-decoration: underline;
+}
+
 .titulo-principal {
   padding-left: 20px;
 }
