--- a/style.css
+++ b/style.css
@@ -1,30 +1,22 @@
-body {
+header {
+  background: #bbbbbb;
+  padding: 20px 0;
 }
 
-#banner {
-  width: 100%;
-}
-
-.principal {
-  background: #cccccc;
-  padding: 30px;
-}
-
-.cx-titulo{
-  /* position: relative; */
+.caixa{
+  position: relative;
   width: 940px;
   margin: 0 auto;
 }
 
 nav{
-  /* position: absolute; */
-  position:static;
+  position: absolute;
   top: 110px;
   right: 0;
 }
 
 nav li {
-  display: inline-block;
+  display: inline;
   margin: 0 0 0 15px;
 }
 
@@ -40,42 +32,117 @@ nav a:hover{
   text-decoration: underline;
 }
 
-.titulo-principal {
-  padding-left: 20px;
+.produtos{
+  width: 940px;
+  margin: 0 auto;
+  padding: 50px 0;
 }
 
-.titulo-center {
-  text-align: center;
-}
-
-p {
-  text-align: center;
-}
-
-#missao {
-  font-size: 20px;
-}
-
-em strong {
-  color: #ff0000;
-}
-
-.itens {
-  font-style: italic;
-}
-
-.beneficios {
-  background: #ffffff;
-  padding: 20px;
-}
-
-ul {
+.produtos li{
   display: inline-block;
+  text-align: center;
+  width: 30%;
   vertical-align: top;
-  width: 20%;
-  margin-right: 15%;
+  margin: 0 1.5%;
+  padding: 30px 20px;
+  box-sizing: border-box;
+  border: 2px solid #000000;
+  border-radius: 10px;
 }
 
-.imgbeneficios {
+.produtos li:hover {
+  border-color: #C78C09;
+}
+
+.produtos li:active{
+  border-color: #088c19;
+}
+
+.produtos li:hover h2{
+  font-size: 34px;
+}
+
+.produtos h2{
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.produto-descricao{
+  font-size: 18px;
+}
+
+.produto-preço{
+  font-size: 22px;
+  font-weight: bold;
+  margin: 10px;
+}
+
+footer{
+  text-align: center;
+  background: url('./assets/bg.jpg');
+  padding: 40px 0;
+}
+
+.copyright{
+  color: #ffffff;
+  font-size: 13px;
+  margin-top: 20px;
+}
+
+main {
+  width: 940px;
+  margin: auto;
+}
+form {
+  margin: 40px 0;
+}
+
+form label, form legend{
+  display: block;
+  font-size: 20px;
+  margin: 0 0 10px;
+}
+
+.input-padrao{
+  display: block;
+  margin: 0 0 20px;
+  padding: 10px 25px;
   width: 50%;
 }
+
+.checkbox{
+  margin: 20px 0;
+}
+
+.enviar{
+  width: 40%;
+  padding: 15px 0;
+  background: orange;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  transition: 1s all;
+}
+
+.enviar:hover{
+  background: darkorange;
+  transform: scale(1.2);
+}
+
+table{
+  margin: 20px 0 40px;
+}
+
+thead {
+  background: #555555;
+  color: #ffffff;
+  font-weight: bold;
+}
+
+td, th {
+  border: 1px solid #000000;
+  padding: 8px 15px;
+}
+
