--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
 header {
   background: #bbbbbb;
   padding: 20px 0;
@@ -90,8 +94,7 @@ footer{
 }
 
 main {
-  width: 940px;
-  margin: auto;
+ 
 }
 form {
   margin: 40px 0;
@@ -146,3 +149,115 @@ td, th {
   padding: 8px 15px;
 }
 
+/* CSS da pagina home    */
+.banner{
+ width: 100%;
+}
+
+.titulo-principal{
+  text-align: center;
+  font-size: 2em;
+  margin: 0 0 1em;
+  clear: left;
+}
+
+.principal{
+  padding: 3em 0;
+  background: #fefefe;
+  width: 940px;
+  margin: auto;
+} 
+
+ .principal p{
+   margin: 0 0 1em;
+ }
+
+ .principal strong {
+   font-weight: bold;
+ }
+
+ .principal em {
+   font-style: italic;
+ }
+
+ .utensilios{
+   width: 120px;
+   float: left;
+   margin: 0 20px 20px 0;
+ }
+
+ .mapa{
+  padding: 3em 0;
+  background: linear-gradient(#fefefe, #888888);
+}
+
+.mapa-conteudo {
+  width: 940px;
+  margin: auto;
+}
+
+.mapa p{
+  margin: 0 0 2em;
+  text-align: center;
+}
+
+ .conteudo-beneficio{
+  width: 640px;
+  margin: 0 auto;
+ }
+
+ .beneficios{
+  padding: 3em 0;
+  background: #888888;
+ }
+
+ .lista-beneficio{
+  width: 40%;
+  display: inline-block;
+  vertical-align: top;
+ }
+
+ .itens{
+   line-height: 1.5;
+ }
+
+ .itens:before{
+   content: "🟊";
+ }
+
+ .itens:first-child{
+   font-weight: bold;
+ }
+
+ .img-beneficios{
+   width: 60%;
+   opacity: 1;
+   transition: 400ms;
+   box-shadow: 10px 10px 10px #000000;
+ }
+
+ .img-beneficios:hover{
+   opacity: 0.3;
+ }
+
+ .video{
+   width: 560px;
+   margin: 2em auto;
+ }
+
+ @media screen and (max-width: 480px) {
+    .caixa, .principal, .conteudo-beneficio, .mapa-conteudo, .video{
+      width: auto;
+    }
+
+    h1 {
+      text-align: center;
+    }
+
+    nav{
+      position: static;
+    }
+    .lista-beneficio, .img-beneficios{
+      width: 100%;
+    }
+ }
